--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
        <div class="navbar__logo">
             <i class="fa-brands fa-accusoft"></i>
-            <a href="">DreamCoding</a>
+            <a href="">JJ Ops</a>
        </div> 
        
        <ul class="navbar__menu">
